Fixed workout overflow CSS issue

--- a/app/styles/components/workouts_home/_workout_item_view.scss
+++ b/app/styles/components/workouts_home/_workout_item_view.scss
@@ -8,6 +8,11 @@
   }
 }
 
+.workout-item:last-of-type {
+  margin-bottom: 60px;
+  border-bottom: 0px;
+}
+
 .workout-item-link {
   @include inline-block;
   width: 100%;
