--- a/app/styles/pages/_workouts_page.scss
+++ b/app/styles/pages/_workouts_page.scss
@@ -1,5 +1,4 @@
 .workouts-page {
-  background: $lighter_gray;
   min-width: $app_min_width;
   max-width: $app_max_width;
 
